@@ -1,8 +1,6 @@
 - Add second, optional argument to Notifier.addObserver(observer, eventName)
   Observers can register even for one, single event
 
-- luga.localStorage to accept numbers/non-strings as path
-
 -------------
 
 DOCS:
